crates/lmml-tui/src/tabs/snapshots/lmml_tui__tabs__tests__build_failed_update_available.snap
---
source: crates/lmml-tui/src/tabs/mod.rs
expression: render_app(&app)
---
"┌lmml────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│ 1 Detect │ 2 Build │ 3 Models │ 4 Server │ 5 Settings                                                      │"
"└────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌Build───────────────────────────────────────────┐┌Build Log─────────────────────────────────────────────────┐"
"│FAILED: cmake failed                            ││Configuring CMake                                         │"
"│Press b to build llama.cpp.                     ││[ 42%] Building                                           │"
"│Press B for a clean build.                      ││                                                          │"
"│Press u to check for updates.                   ││                                                          │"
"│Source: $HOME/.local/share/lmml/llama.cpp││                                                          │"
"│Backend: Auto                                   ││                                                          │"
"│sccache: not active                             ││                                                          │"
"│Update: Available { current: "abc", latest: "def││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"└────────────────────────────────────────────────┘└──────────────────────────────────────────────────────────┘"
"lmml  Server: stopped  Ready  [?] Help  [q] Quit                                                              "
