crates/lmml-tui/src/tabs/snapshots/lmml_tui__tabs__tests__build_update_available.snap
---
source: crates/lmml-tui/src/tabs/mod.rs
expression: render_app(&app)
---
"┌lmml────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│ 1 Detect │ 2 Build │ 3 Models │ 4 Server │ 5 Settings                                                      │"
"└────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌Build───────────────────────────────────────────┐┌Build Log─────────────────────────────────────────────────┐"
"│FAILED: cmake failed                            ││CMake Error                                               │"
"│Press b to build llama.cpp.                     ││                                                          │"
"│Press B for a clean build.                      ││                                                          │"
"│Press u to check for updates.                   ││                                                          │"
"│Set build_runtime in Settings before building.  ││                                                          │"
"│Runtime: upstream                               ││                                                          │"
"│Repository: https://github.com/ggml-org/llama.cp││                                                          │"
"│Requested ref: tracking policy                  ││                                                          │"
"│Resolved commit: not built                      ││                                                          │"
"│Source: $HOME/.local/share/lmml/llama.cpp││                                                          │"
"│Binary: $HOME/.local/share/lmml/llama.cpp││                                                          │"
"│Backend: Auto                                   ││                                                          │"
"│sccache: not active                             ││                                                          │"
"│Update: Available { current: "abc", latest: "def││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"└────────────────────────────────────────────────┘└──────────────────────────────────────────────────────────┘"
"lmml  Server: stopped  Ready  [?] Help  [q] Quit                                                              "
