crates/lmml-tui/src/tabs/snapshots/lmml_tui__tabs__tests__detect_complete_all_green.snap
---
source: crates/lmml-tui/src/tabs/mod.rs
expression: render_app(&app)
---
"┌lmml | runtime: auto | build: upstream──────────────────────────────────────────────────────────────────────┐"
"│ 1 Detect │ 2 Build │ 3 Models │ 4 Server │ 5 Settings                                                      │"
"└────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌System──────────────────────────────────────────┐┌Probe Log─────────────────────────────────────────────────┐"
"│[OK] compiler: /usr/bin/g++ (g++ 15.2.0)        ││Detected backend: Cuda { archs: ["sm_86"] }               │"
"│[OK] cmake 4.2.3                                ││                                                          │"
"│[OK] git 2.45.0                                 ││                                                          │"
"│[OK] CUDA compatible: sm_86                     ││                                                          │"
"│[OK] NVIDIA RTX 3090 · sm_86 · 24 GB VRAM       ││                                                          │"
"│[OK] sccache active: /usr/bin/sccache           ││                                                          │"
"│[OK] RAM: 32 GB available / 64 GB total         ││                                                          │"
"│[OK] disk: 200 GB free at $HOME/repos/lmm││                                                          │"
"│[OK] recommended backend: Cuda { archs: ["sm_86"││                                                          │"
"│                                                ││                                                          │"
"│AI accelerator catalog                          ││                                                          │"
"│[OK] NVIDIA GeForce RTX 3090 · 24GB GDDR6X · CUD││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"└────────────────────────────────────────────────┘└──────────────────────────────────────────────────────────┘"
"lmml  Server: stopped  Ready  [?] Help  [q] Quit                                                              "
