crates/lmml-tui/src/tabs/snapshots/lmml_tui__tabs__tests__detect_cuda_warning.snap
---
source: crates/lmml-tui/src/tabs/mod.rs
expression: render_app(&app)
---
"┌lmml | runtime: auto | build: upstream──────────────────────────────────────────────────────────────────────┐"
"│ 1 Detect │ 2 Build │ 3 Models │ 4 Server │ 5 Settings                                                      │"
"└────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌System──────────────────────────────────────────┐┌Probe Log─────────────────────────────────────────────────┐"
"│[OK] compiler: /usr/bin/g++ (g++ 15.2.0)        ││Warning: sm_89 requires CUDA >= 11.8; found 11.0          │"
"│[OK] cmake 4.2.3                                ││                                                          │"
"│[OK] git 2.45.0                                 ││                                                          │"
"│[WARN] sm_89 requires CUDA >= 11.8; found 11.0  ││                                                          │"
"│[OK] NVIDIA RTX 4090 · sm_89 · 24 GB VRAM       ││                                                          │"
"│[OK] sccache active: /usr/bin/sccache           ││                                                          │"
"│[OK] RAM: 32 GB available / 64 GB total         ││                                                          │"
"│[OK] disk: 200 GB free at $HOME/repos/lmm││                                                          │"
"│[OK] recommended backend: CpuAvx2               ││                                                          │"
"│                                                ││                                                          │"
"│AI accelerator catalog                          ││                                                          │"
"│[OK] NVIDIA GeForce RTX 4090 · 24GB GDDR6X · CUD││                                                          │"
"│                                                ││                                                          │"
"│Warnings                                        ││                                                          │"
"│[WARN] sm_89 requires CUDA >= 11.8; found 11.0  ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"└────────────────────────────────────────────────┘└──────────────────────────────────────────────────────────┘"
"lmml  Server: stopped  Ready  [?] Help  [q] Quit                                                              "
